@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+common/readable.c: Apply patch by Kevin Rudat to fix buffer overrun while
+  generating book titles.
+Andreas Kirschbaum 2004-10-09
+
 include/sproto.h: Add function prototype.
 server/c_wiz.c: Add 'command_stack_clear' to clear DM item stack.
 server/commands.c: Link function to function array.
